--- a/spotTheDiff.ui
+++ b/spotTheDiff.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>1400</width>
-    <height>1000</height>
+    <height>720</height>
    </rect>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>1400</width>
+    <height>720</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Form</string>
@@ -23,13 +29,13 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>100</y>
-     <width>1401</width>
-     <height>751</height>
+     <x>-10</x>
+     <y>50</y>
+     <width>1411</width>
+     <height>581</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_2">
+   <layout class="QHBoxLayout" name="imageLayout">
     <item>
      <spacer name="horizontalSpacer_4">
       <property name="orientation">
@@ -50,8 +56,8 @@
      <widget class="QGraphicsView" name="imageView">
       <property name="maximumSize">
        <size>
-        <width>560</width>
-        <height>747</height>
+        <width>420</width>
+        <height>560</height>
        </size>
       </property>
       <property name="styleSheet">
@@ -85,8 +91,8 @@
      <widget class="QGraphicsView" name="diffView">
       <property name="maximumSize">
        <size>
-        <width>560</width>
-        <height>747</height>
+        <width>420</width>
+        <height>560</height>
        </size>
       </property>
       <property name="styleSheet">
@@ -121,13 +127,13 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>890</y>
+     <x>-10</x>
+     <y>630</y>
      <width>1401</width>
      <height>66</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout_3">
+   <layout class="QHBoxLayout" name="bottomLayout">
     <item>
      <spacer name="horizontalSpacer_7">
       <property name="orientation">
@@ -138,7 +144,7 @@
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>80</width>
+        <width>170</width>
         <height>20</height>
        </size>
       </property>
@@ -148,7 +154,7 @@
      <widget class="QLabel" name="SpottedLabel">
       <property name="font">
        <font>
-        <pointsize>36</pointsize>
+        <pointsize>32</pointsize>
         <kerning>true</kerning>
        </font>
       </property>
@@ -173,7 +179,7 @@
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>350</width>
+        <width>280</width>
         <height>20</height>
        </size>
       </property>
@@ -227,7 +233,7 @@
       </property>
       <property name="font">
        <font>
-        <pointsize>36</pointsize>
+        <pointsize>32</pointsize>
         <kerning>true</kerning>
        </font>
       </property>
@@ -252,7 +258,7 @@
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>80</width>
+        <width>165</width>
         <height>20</height>
        </size>
       </property>
@@ -263,13 +269,13 @@
   <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>1</x>
-     <y>30</y>
+     <x>0</x>
+     <y>10</y>
      <width>1401</width>
      <height>33</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QHBoxLayout" name="topButtons">
     <item>
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
@@ -280,7 +286,7 @@
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>80</width>
+        <width>160</width>
         <height>20</height>
        </size>
       </property>
@@ -329,7 +335,7 @@ QPushButton#homeButton:hover {
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>940</width>
+        <width>800</width>
         <height>20</height>
        </size>
       </property>
@@ -378,7 +384,7 @@ QPushButton#restartButton:hover {
       </property>
       <property name="sizeHint" stdset="0">
        <size>
-        <width>80</width>
+        <width>170</width>
         <height>20</height>
        </size>
       </property>
