--- a/spotTheDiff.ui
+++ b/spotTheDiff.ui
@@ -6,14 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1300</width>
-    <height>720</height>
+    <width>1920</width>
+    <height>1080</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1920</width>
+    <height>1080</height>
+   </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>2000</width>
-    <height>1200</height>
+    <width>16777215</width>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -176,14 +182,14 @@ QPushButton#restartButton:hover {
             </property>
             <property name="minimumSize">
              <size>
-              <width>420</width>
-              <height>560</height>
+              <width>560</width>
+              <height>747</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>420</width>
-              <height>560</height>
+              <width>560</width>
+              <height>747</height>
              </size>
             </property>
             <property name="styleSheet">
@@ -207,14 +213,14 @@ QPushButton#restartButton:hover {
             </property>
             <property name="minimumSize">
              <size>
-              <width>420</width>
-              <height>560</height>
+              <width>560</width>
+              <height>747</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>420</width>
-              <height>560</height>
+              <width>560</width>
+              <height>747</height>
              </size>
             </property>
             <property name="styleSheet">
