--- a/spotTheDiff.ui
+++ b/spotTheDiff.ui
@@ -10,6 +10,12 @@
     <height>1080</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="minimumSize">
    <size>
     <width>1920</width>
@@ -37,7 +43,7 @@
     <widget class="QStackedWidget" name="stackedWidget">
      <widget class="QWidget" name="Game">
       <layout class="QVBoxLayout" name="verticalLayout_2">
-       <item>
+       <item alignment="Qt::AlignHCenter">
         <widget class="QFrame" name="frame">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -47,7 +53,7 @@
          </property>
          <property name="minimumSize">
           <size>
-           <width>1000</width>
+           <width>1700</width>
            <height>50</height>
           </size>
          </property>
@@ -163,8 +169,14 @@ QPushButton#restartButton:hover {
          </layout>
         </widget>
        </item>
-       <item>
+       <item alignment="Qt::AlignHCenter">
         <widget class="QFrame" name="imageFrame">
+         <property name="minimumSize">
+          <size>
+           <width>1700</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="frameShape">
           <enum>QFrame::StyledPanel</enum>
          </property>
@@ -237,11 +249,11 @@ QPushButton#restartButton:hover {
          </layout>
         </widget>
        </item>
-       <item>
+       <item alignment="Qt::AlignHCenter">
         <widget class="QFrame" name="infoFrame">
          <property name="minimumSize">
           <size>
-           <width>1282</width>
+           <width>1700</width>
            <height>68</height>
           </size>
          </property>
